crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__view__tests__login_browser_dialog.snap
---
source: crates/bingo-surface-tui/src/view.rs
expression: "render(&state, &ui, now)"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"Sign in · codex                                                                 "
"  Finish in the browser. If it did not open, go to:                             "
"  https://auth.openai.com/oauth/authorize?client_id=app_x&state=s1              "
"                                                                                "
"❯ 1. Cancel                                                                     "
"  enter to select · ↑/↓ to navigate · esc to cancel                             "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│❯ ask anything · / for commands · ! for shell                                 │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"? for shortcuts · / commands · ! shell                                    fake-1"
