crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__view__tests__login_device_dialog.snap
---
source: crates/bingo-surface-tui/src/view.rs
expression: "render(&state, &ui, now)"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│Sign in to codex                                                              │"
"│  Open this address and enter the code:                                       │"
"│  https://auth.openai.com/codex/device                                        │"
"│  code: ABCD-EFGH                                                             │"
"│❯ 1. Cancel (esc)                                                             │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ > ask anything · / for commands · ! for shell                                │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"? for shortcuts                                                           fake-1"
