crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__view__tests__login_paste_dialog_with_the_words_row_open.snap
---
source: crates/bingo-surface-tui/src/view.rs
expression: "render(&state, &ui, now)"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│Sign in to codex                                                              │"
"│  A credential minted elsewhere.                                              │"
"│❯ 1. Paste it here                                                            │"
"│     > sk-pasted-elsewhere                                                    │"
"│  2. Cancel (esc)                                                             │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ > ask anything · / for commands · ! for shell                                │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"? for shortcuts                                                           fake-1"
