crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__view__tests__permission_collapsed.snap
---
source: crates/bingo-surface-tui/src/view.rs
expression: "render(&state, &ui, now)"
---
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│Edit                                                                          │"
"│  +line 0                                                                     │"
"│  +line 1                                                                     │"
"│  +line 2                                                                     │"
"│  +line 3                                                                     │"
"│  +line 4                                                                     │"
"│  +line 5                                                                     │"
"│  +line 6                                                                     │"
"│  +line 7                                                                     │"
"│  +line 8                                                                     │"
"│  +line 9                                                                     │"
"│  +line 10                                                                    │"
"│  +line 11                                                                    │"
"│  … +8 lines (ctrl+e to expand)                                               │"
"│                                                                              │"
"│Do you want to edit src/lib.rs?                                               │"
"│❯ 1. Yes                                                                      │"
"│  2. Yes, allow Edit(src/) during this session                                │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ > ask anything · / for commands · ! for shell                                │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"? for shortcuts                                                           fake-1"
