crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__view__tests__permission_with_the_feedback_row_open.snap
---
source: crates/bingo-surface-tui/src/view.rs
expression: "render(&state, &ui, now)"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ Edit                                                                         │"
"│   /tmp/project                                                               │"
"│   $ rm -rf build                                                             │"
"│                                                                              │"
"│ Do you want to edit src/lib.rs?                                              │"
"│   1. Yes                                                                     │"
"│ ❯ 2. No, and tell bingo what to do differently (esc)                         │"
"│      > use cargo clean                                                       │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ > ask anything · / for commands · ! for shell                                │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"? for shortcuts                                                      fake/fake-1"
