crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__view__tests__question_multi.snap
---
source: crates/bingo-surface-tui/src/view.rs
expression: "render(&state, &ui, now)"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ Auth                                                                         │"
"│                                                                              │"
"│ Which provider?                                                              │"
"│ ❯ 1. ☒ Anthropic                                                             │"
"│      claude models                                                           │"
"│   2. ☐ OpenAI                                                                │"
"│   3. Other                                                                   │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ > ask anything · / for commands · ! for shell                                │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"? for shortcuts                                                           fake-1"
