crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__view__tests__question_single.snap
---
source: crates/bingo-surface-tui/src/view.rs
expression: "render(&state, &ui, now)"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"Question · Auth                                                                 "
"  Which provider?                                                               "
"                                                                                "
"❯ 1. Anthropic                                                                  "
"     claude models                                                              "
"  2. OpenAI                                                                     "
"  enter to select · ↑/↓ to navigate · esc to cancel                             "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│❯ ask anything · / for commands · ! for shell                                 │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"? for shortcuts                                                           fake-1"
