crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__view__tests__switcher_row_live.snap
---
source: crates/bingo-surface-tui/src/view.rs
assertion_line: 1567
expression: awake
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ ✻ Welcome to bingo!                                                          │"
"│                                                                              │"
"│   /help for help · /login codex to use a subscription                        │"
"│   cwd: /tmp/project                                                          │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"                                                                                "
"> have it reviewed                                                              "
"                                                                                "
"⏺ reviewer(review the diff)                                                     "
"  ⏺ project   have it reviewed                                                  "
"  ⏺ reviewer  running · 0 tools · 0 tokens                                      "
"❯ ⏺ scout     idle                                                              "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ > ask anything · / for commands · ! for shell                                │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"1 running                                                                 fake-1"
