crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__view__tests__switcher_row_stored.snap
---
source: crates/bingo-surface-tui/src/view.rs
assertion_line: 1561
expression: asleep
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ ✻ Welcome to bingo!                                                          │"
"│                                                                              │"
"│   /help for help · /login codex to use a subscription                        │"
"│   cwd: /tmp/project                                                          │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"                                                                                "
"> have it reviewed                                                              "
"                                                                                "
"⏺ reviewer(review the diff)                                                     "
"  ⏺ project   have it reviewed                                                  "
"  ⏺ reviewer  running · 0 tools · 0 tokens                                      "
"❯ ⏺ scout     stored                                                            "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ > ask anything · / for commands · ! for shell                                │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"1 running                                                                 fake-1"
